test/neg/pack01.msmt_
; Sorts


; Constants




; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints
(wf $k1 ((lq_karg$vk11##k1 Int)(lq_karg$vk12##k1 Int)))
(wf $k0 ((lq_karg$vk01##k0 Int)(lq_karg$vk02##k0 Int)))

;  Constraints
(constraint (forall ((_VV##1 Int)(pig Int)) (=> (= _VV##1 (+ pig 1)) ($k0 pig _VV##1))))
(constraint (forall ((_VV##2 Int)(pig Int)) (=> (= _VV##2 (+ pig 1)) ($k1 pig _VV##2))))
(constraint (forall ((_VV##3 Int)(bob Int)(argBob Int)(alice Int)(argAlice Int)(v Int)) (=> (and (= argAlice 10) (and ($k0 argAlice v) (and (= argBob 20) (and ($k1 argBob v) (= _VV##3 (+ alice bob)))))) (= _VV##3 0))))

